Several CSS / GUI fixes Changes since last time: - Reintroduced separator lines between tools, also when collapsed. This plays very nicely with the outset-look of the tool contents itself. - Minor tweaks to disabled font color - Fixed: some tool titles showed in bold font and some not, now they can all be styled properly

--- a/rtdata/themes/RawTherapee-GTK3-20_.css
+++ b/rtdata/themes/RawTherapee-GTK3-20_.css
@@ -22,18 +22,16 @@
 /**/ @import "size.css"; /**/ /* TODO: Remove this weird dependancy */
 /***************************/
 
-/* text-shadow causes a serious performance degradation in rendering the UI,
- * at least in comboboxes with many entries (i.e. Profiled Lens Correction).
-*/
-
+/** Set style defaults **/
 * {
     color: #AAAAAA;
-    text-shadow: none;
+    text-shadow: none; /* Keep at none, or suffer serious performance issues */
+    font-size: 1em;
 }
 
 *:disabled {
-    color: #666666;
-    opacity: 0.7;
+    color: rgba(255,255,255,0.25);
+    opacity: 0.8;
 }
 
 .view:selected:not(check):not(radio) {
@@ -62,17 +60,15 @@ window.background {
 }
 
 /*** Window decoration *********************************************************/
-@define-color winHeaderbar rgb(50,50,50);
-
 .csd:not(.popup):not(tooltip) > decoration {
     background-color: #484848;
     background-image: none;
     box-shadow: 0 0.25em 0.75em 0.083333333333333333em rgba(0, 0, 0, 0.5), 0 0 0 0.083333333333333333em #242424;
 }
 headerbar {
-    background-color: shade(@winHeaderbar,1.12);
+    background-color: shade(rgb(50,50,50),1.12);
     box-shadow: inset 0 0.083333333333333333em rgba(200,200,200,.13);
-    background-image: linear-gradient(shade(@winHeaderbar,1.14), shade(@winHeaderbar,.86));
+    background-image: linear-gradient(shade(rgb(50,50,50),1.14), shade(rgb(50,50,50),.86));
     border-bottom-color: #242424;
 }
 dialog > box {
@@ -88,7 +84,6 @@ window.csd:not(.fullscreen) #MainNotebook > header.top {
 .maximized > headerbar {
     border-radius: 0;
 }
-/**/
 
 /*** End Window decoration *****************************************************/
 
@@ -722,6 +717,23 @@ flowboxchild:selected {
     margin-right: 1em;
 }
 
+/* Borders around tools and subtools */
+#MyExpander,
+#MyExpander #MyExpander {
+    border-top: 0.0833333333333333em solid rgba(0,0,0,0.3);
+}
+#MyExpander:first-child {
+    border-top: none;
+}
+#MyExpander:nth-last-child(2),
+#MyExpander #MyExpander:nth-last-child(1) {
+    border-bottom: 0.0833333333333333em solid rgba(0,0,0,0.3);
+}
+#MyExpander #MyExpander:nth-last-child(2) {
+    border-bottom: none;
+}
+
+
 /* Tool background */
 #ExpanderBox > box,
 #ExpanderBox > grid {
@@ -729,7 +741,7 @@ flowboxchild:selected {
     margin: 0;
     padding: 0.5em 0.5em 0.75em 0.5em;
     border-top: 0.0833333333333333em solid rgba(255,255,255,0.1);
-    border-bottom: 0.0833333333333333em solid rgba(0,0,0,0.3);
+    border-bottom: none;
 }
 
 /* Not all combinations below are used, but this makes sure
@@ -759,14 +771,14 @@ flowboxchild:selected {
     margin: 0;
     padding: 0.25em 0.5em 0.5em 0.25em;
     border-top: 0.0833333333333333em solid rgba(255,255,255,0.1);
-    border-bottom: 0.0833333333333333em solid rgba(0,0,0,0.3);
+    border-bottom: none;
 }
 
 #MyExpanderTitle label {
     color: #999999;
     padding: 0;
     margin: 0;
-    font-size: 1.1em;
+    font-size: 1.1em; /* Does not work? */
     font-weight: bold;
 }
 
@@ -790,14 +802,12 @@ flowboxchild:selected {
 /* Alignment of tool headers is controlled by the image */
 #MyExpander.Fold > #MyExpanderTitle box > image,
 #MyExpander.OnOff > #MyExpanderTitle #MyExpanderStatus image {
-    border: solid 0.0833333333333333em transparent;
-    padding: 0.25em;
-    margin: 0.3em 0.5em 0.3em 0;
+    padding: 0.4em;
+    margin: 0.3em 0.3em 0.3em 0; /* Change to margin: 0.3em 0.5em 0.3em 0; when testing dark background */
 }
 
-#MyExpander.enabledTool > #MyExpanderTitle #MyExpanderStatus image {
-    border: solid 0.0833333333333333em rgba(255,255,255,0.15);
-    background: @theme_selected_bg_color;
+#MyExpander.OnOff.enabledTool > #MyExpanderTitle #MyExpanderStatus image {
+    /*background: #292929;*/ /* Remove comments to test dark background */
 }
 
 #LocallabToolPanel separator, #ExpanderBox2 separator, #ExpanderBox3 separator {
